--- a/public/index.html
+++ b/public/index.html
@@ -5,32 +5,32 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DFHFcmvv.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DIfODVMg.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.BenPUt-j.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Be1nNjqd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/render.B5b9gsi9.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/template.DcwmSksp.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DGvM12OR.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Bhn-SsuX.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.8aERoiLu.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.2wR5KPcI.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/render.BjEt2VPh.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/template.tWMG4ekI.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/if.Byosc3I8.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.BBbqMt33.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/props.CCJXln1l.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/store.2V2XTQXH.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.GFVulxwk.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/if.vGGyft-f.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.DE6t_P0E.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/props.JViQqo7D.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/store.BEh2r4zG.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.8_MlTCsB.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div>
 			<script>
 				{
-					__sveltekit_1wdk6j6 = {
+					__sveltekit_1fx1aia = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DFHFcmvv.js"),
-						import("/_app/immutable/entry/app.Be1nNjqd.js")
+						import("/_app/immutable/entry/start.DGvM12OR.js"),
+						import("/_app/immutable/entry/app.2wR5KPcI.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
