Start implementing AudioStore across music components

--- a/public/index.html
+++ b/public/index.html
@@ -5,34 +5,35 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.GxABu_sf.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BhgR2p_C.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.B4SQLpdX.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.FgZZ6e5B.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/utils.BUMml7Ov.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.ClO16iUv.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/render.C5x3Ex4e.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/template.Cv82tJgS.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BgkvFwSD.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BGnbomFb.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.CujgLOHB.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.fZE6by7T.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/utils.1sHAIxVS.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.C6Qsa0Np.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/render.DYv6prKW.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/template.GUaYdGvl.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/if.zW0AoowE.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.0PXur3Bm.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/props.BjqCnqa2.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/store.BGe7FJga.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.BhmIk07o.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/if.Ck0J_65a.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.BCqRXuL-.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/this.CLTXWt5D.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/props.BinKfw78.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/store.BVwix2HP.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.2-vHILIg.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div>
 			<script>
 				{
-					__sveltekit_1ntvhnj = {
+					__sveltekit_13u67g1 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.GxABu_sf.js"),
-						import("/_app/immutable/entry/app.ClO16iUv.js")
+						import("/_app/immutable/entry/start.BgkvFwSD.js"),
+						import("/_app/immutable/entry/app.C6Qsa0Np.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
