Finish backbone of music, it works!!!

--- a/public/index.html
+++ b/public/index.html
@@ -5,35 +5,35 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BgkvFwSD.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BGnbomFb.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.CujgLOHB.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.fZE6by7T.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/utils.1sHAIxVS.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.C6Qsa0Np.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/render.DYv6prKW.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/template.GUaYdGvl.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BM93hf1Y.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.p6IIsQZ7.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.D5Mm-hzT.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.C4w1XdQw.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/utils.D8egsZMN.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DERUGlb7.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/render.k5wGaj38.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/template.xCgAhjl1.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/if.Ck0J_65a.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.BCqRXuL-.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/this.CLTXWt5D.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/props.BinKfw78.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/store.BVwix2HP.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.2-vHILIg.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/if.Drh3nZbA.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.BmSYkIuj.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/this.BX203tyX.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/props.5dWkrpjM.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/store.D2S8XtGk.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.Djpe44e6.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div>
 			<script>
 				{
-					__sveltekit_13u67g1 = {
+					__sveltekit_1fgh8s6 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BgkvFwSD.js"),
-						import("/_app/immutable/entry/app.C6Qsa0Np.js")
+						import("/_app/immutable/entry/start.BM93hf1Y.js"),
+						import("/_app/immutable/entry/app.DERUGlb7.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
