--- a/public/index.html
+++ b/public/index.html
@@ -5,35 +5,35 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.NKokFilA.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.B_JuTjGC.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.D5Mm-hzT.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.C4w1XdQw.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/utils.D8egsZMN.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DP2FrZ4r.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/render.k5wGaj38.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/template.xCgAhjl1.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CWvCIvb6.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.C54WJVC9.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.PJFtGBc-.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.itU1-eAt.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.BFqC5wTN.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.-nxUdwdU.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CDmBDmQc.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/render.Dr4UWjeq.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/events.Dwqh_hTn.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/template.CiIwdCRR.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/if.Drh3nZbA.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.BmSYkIuj.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/this.BX203tyX.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/props.5dWkrpjM.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/store.D2S8XtGk.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.Djpe44e6.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/if.vB35G9Pt.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.TeBb5cww.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/this.czsSTkoI.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/props.OAQlePv7.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div>
 			<script>
 				{
-					__sveltekit_4rfc5a = {
+					__sveltekit_q7kycd = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.NKokFilA.js"),
-						import("/_app/immutable/entry/app.DP2FrZ4r.js")
+						import("/_app/immutable/entry/start.CWvCIvb6.js"),
+						import("/_app/immutable/entry/app.CDmBDmQc.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
