Contact-us properly works!

--- a/public/index.html
+++ b/public/index.html
@@ -5,35 +5,33 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CWvCIvb6.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.C54WJVC9.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.PJFtGBc-.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.itU1-eAt.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.C9XMT5Qx.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.D_LYdq4C.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.DbyKbbhq.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.-nxUdwdU.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CDmBDmQc.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/render.Dr4UWjeq.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/events.Dwqh_hTn.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/template.CiIwdCRR.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.BulT-dvm.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DlaSX2Ra.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/render.BpUttAOF.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/template.B6k_Tk7a.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/if.vB35G9Pt.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.TeBb5cww.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/this.czsSTkoI.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/props.OAQlePv7.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/if.I0_TII3s.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.F_J2AGxx.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/this.ByRBVGu9.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/props.wRmurA5N.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div>
 			<script>
 				{
-					__sveltekit_q7kycd = {
+					__sveltekit_wg9yvu = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CWvCIvb6.js"),
-						import("/_app/immutable/entry/app.CDmBDmQc.js")
+						import("/_app/immutable/entry/start.C9XMT5Qx.js"),
+						import("/_app/immutable/entry/app.DlaSX2Ra.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
