Tweak Music but still no mobile support

--- a/public/index.html
+++ b/public/index.html
@@ -5,33 +5,33 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.C9XMT5Qx.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.D_LYdq4C.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.DbyKbbhq.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BPG-ErPp.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DJP7RtnQ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.CHxRNfLn.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.BulT-dvm.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DlaSX2Ra.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/render.BpUttAOF.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/template.B6k_Tk7a.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.B5OfHpNx.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.UU-cX0aO.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/render.CvTPB3-6.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/template.BBsDH0qk.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/if.I0_TII3s.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.F_J2AGxx.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/this.ByRBVGu9.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/props.wRmurA5N.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/if.DML_PgDJ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.DLfti-hq.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/this.R1HgDf1x.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/props.DNKNdPue.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div>
 			<script>
 				{
-					__sveltekit_wg9yvu = {
+					__sveltekit_1d8dusd = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.C9XMT5Qx.js"),
-						import("/_app/immutable/entry/app.DlaSX2Ra.js")
+						import("/_app/immutable/entry/start.BPG-ErPp.js"),
+						import("/_app/immutable/entry/app.UU-cX0aO.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
