Add a client-side captcha to contact-us

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BPG-ErPp.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DJP7RtnQ.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BcYTt-ln.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Dc3uk9QX.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.CHxRNfLn.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BFqC5wTN.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.B5OfHpNx.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.UU-cX0aO.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Bg6Irdst.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/render.CvTPB3-6.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/template.BBsDH0qk.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Bg9kRutz.js">
@@ -23,15 +23,15 @@
 		<div>
 			<script>
 				{
-					__sveltekit_1d8dusd = {
+					__sveltekit_1rxc9fh = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BPG-ErPp.js"),
-						import("/_app/immutable/entry/app.UU-cX0aO.js")
+						import("/_app/immutable/entry/start.BcYTt-ln.js"),
+						import("/_app/immutable/entry/app.Bg6Irdst.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
