--- a/public/index.html
+++ b/public/index.html
@@ -5,33 +5,33 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BcYTt-ln.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Dc3uk9QX.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.CHxRNfLn.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Bq8DppU8.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.F781E6fs.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.DE1YJc47.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.B5OfHpNx.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Bg6Irdst.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/render.CvTPB3-6.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/template.BBsDH0qk.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.04mvN_zB.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.ME3zcCRq.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/render.DfN8F51E.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/template.B-c7bCij.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/if.DML_PgDJ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.DLfti-hq.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/this.R1HgDf1x.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/props.DNKNdPue.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/if.Di_wBFQm.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.BapR-p-T.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/this.D5FJOPJm.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/props.DEt05j3o.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div>
 			<script>
 				{
-					__sveltekit_1rxc9fh = {
+					__sveltekit_1ywnid0 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BcYTt-ln.js"),
-						import("/_app/immutable/entry/app.Bg6Irdst.js")
+						import("/_app/immutable/entry/start.Bq8DppU8.js"),
+						import("/_app/immutable/entry/app.ME3zcCRq.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
