--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,14 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Civ9yQak.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.P8rBnwZf.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BLwqZ-2Y.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.nfba4nMA.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.DE1YJc47.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BFqC5wTN.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.04mvN_zB.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.6o56uC_9.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/render.DfN8F51E.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/template.B-c7bCij.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BJcBAzLX.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/render.BnQAOlvl.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/template.BenDXqtW.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Bg9kRutz.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/if.Di_wBFQm.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.BapR-p-T.js">
@@ -23,15 +23,15 @@
 		<div>
 			<script>
 				{
-					__sveltekit_1408gt7 = {
+					__sveltekit_pjxmk = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Civ9yQak.js"),
-						import("/_app/immutable/entry/app.6o56uC_9.js")
+						import("/_app/immutable/entry/start.BLwqZ-2Y.js"),
+						import("/_app/immutable/entry/app.BJcBAzLX.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
