Update music to look/feel better, todo is mobile support

--- a/public/index.html
+++ b/public/index.html
@@ -5,33 +5,35 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BPG-ErPp.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DJP7RtnQ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.CHxRNfLn.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DtLHHs1N.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Cu4gnpmV.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.D7L8oEfo.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.B5OfHpNx.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.UU-cX0aO.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/render.CvTPB3-6.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/template.BBsDH0qk.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.IPA0ONf6.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.rL0qVwSI.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/render.BZsEfZAk.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/events.xi1H4yCq.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/misc.OM_oEJlp.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/template.X_sbqzcc.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/if.DML_PgDJ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.DLfti-hq.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/this.R1HgDf1x.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/props.DNKNdPue.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/if.BmTwtb5j.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.D64hHBL6.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/this.BKQOpJiF.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/props.Bvj8dNuF.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div>
 			<script>
 				{
-					__sveltekit_1d8dusd = {
+					__sveltekit_1i9rhx8 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BPG-ErPp.js"),
-						import("/_app/immutable/entry/app.UU-cX0aO.js")
+						import("/_app/immutable/entry/start.DtLHHs1N.js"),
+						import("/_app/immutable/entry/app.rL0qVwSI.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
