--- a/public/index.html
+++ b/public/index.html
@@ -4,36 +4,38 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<link rel="prefetch" href="/icons/spinning-note.gif" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DtLHHs1N.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Cu4gnpmV.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.D7L8oEfo.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Bv30UJr9.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Dk5ThpnS.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.iQKlsdhn.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.IPA0ONf6.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.rL0qVwSI.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/render.BZsEfZAk.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/events.xi1H4yCq.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/misc.OM_oEJlp.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/template.X_sbqzcc.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.CUOKt09c.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DKlNRbED.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/render.vO5ccMwn.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/events.yjIKy8IW.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/misc.BqLOfrm1.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/template.CErwSTIh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/if.BmTwtb5j.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.D64hHBL6.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/this.BKQOpJiF.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/props.Bvj8dNuF.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/if.tNghzB6U.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.DP43T8Dr.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/this.Bjx4tsVD.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/props.CAU5CTx9.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div>
 			<script>
 				{
-					__sveltekit_1i9rhx8 = {
+					__sveltekit_134oslb = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DtLHHs1N.js"),
-						import("/_app/immutable/entry/app.rL0qVwSI.js")
+						import("/_app/immutable/entry/start.Bv30UJr9.js"),
+						import("/_app/immutable/entry/app.DKlNRbED.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
