Tweak mobile support for music, finally implement shuffle

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
 
 		<link rel="prefetch" href="/icons/spinning-note.gif" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Bv30UJr9.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Dk5ThpnS.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DFxak80t.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BjzcqumP.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.iQKlsdhn.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BFqC5wTN.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.CUOKt09c.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DKlNRbED.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DMhTeOHv.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/render.vO5ccMwn.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/events.yjIKy8IW.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/misc.BqLOfrm1.js">
@@ -27,15 +27,15 @@
 		<div>
 			<script>
 				{
-					__sveltekit_134oslb = {
+					__sveltekit_ve76uq = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Bv30UJr9.js"),
-						import("/_app/immutable/entry/app.DKlNRbED.js")
+						import("/_app/immutable/entry/start.DFxak80t.js"),
+						import("/_app/immutable/entry/app.DMhTeOHv.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
