--- a/public/index.html
+++ b/public/index.html
@@ -4,38 +4,45 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-
-		<link rel="prefetch" href="/icons/spinning-note.gif" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DFxak80t.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BjzcqumP.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.iQKlsdhn.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.jptERz_a.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.D1P5-aW-.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.DeTz2lhw.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.CUOKt09c.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DMhTeOHv.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/render.vO5ccMwn.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/events.yjIKy8IW.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/misc.BqLOfrm1.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/template.CErwSTIh.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.Bf7BvnXe.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CCUwllus.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/render.Dof2bUd0.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/events.DApdfJhD.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/misc.C4EbQP60.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/template.jkF1M-O1.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/if.tNghzB6U.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.DP43T8Dr.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/this.Bjx4tsVD.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/props.CAU5CTx9.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/if.CrXyeb5V.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.DEj9Qjra.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/this.CD6bZt8-.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/props.C3pT4QDx.js">
 	</head>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-99L1JC49Z1"></script>
+	<!-- Google tag (gtag.js) -->
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-99L1JC49Z1');
+	</script>
 	<body data-sveltekit-preload-data="hover">
 		<div>
 			<script>
 				{
-					__sveltekit_ve76uq = {
+					__sveltekit_1iv3cvt = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DFxak80t.js"),
-						import("/_app/immutable/entry/app.DMhTeOHv.js")
+						import("/_app/immutable/entry/start.jptERz_a.js"),
+						import("/_app/immutable/entry/app.CCUwllus.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
