Tweak background to not stutter when vh changes, add some titles - TODO is better accessibility

--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,20 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.jptERz_a.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.D1P5-aW-.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.DeTz2lhw.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CfMJSdpc.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DlZEK8Iw.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.D8NWaD82.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.Bf7BvnXe.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CCUwllus.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/render.Dof2bUd0.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/events.DApdfJhD.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/misc.C4EbQP60.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/template.jkF1M-O1.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.Cx2jPaMs.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DEZ1TnJp.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/render.yXKOYZdl.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/events.dSNPNGWI.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/template.Bwm0jNJA.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/if.CrXyeb5V.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.DEj9Qjra.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/this.CD6bZt8-.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/props.C3pT4QDx.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/if.C-IyMfWz.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.BbwgnY3B.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/this.BOyXjEu9.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/props.BwWMqRTi.js">
 	</head>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-99L1JC49Z1"></script>
 	<!-- Google tag (gtag.js) -->
@@ -34,15 +33,15 @@
 		<div>
 			<script>
 				{
-					__sveltekit_1iv3cvt = {
+					__sveltekit_kkbzr3 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.jptERz_a.js"),
-						import("/_app/immutable/entry/app.CCUwllus.js")
+						import("/_app/immutable/entry/start.CfMJSdpc.js"),
+						import("/_app/immutable/entry/app.DEZ1TnJp.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
