--- a/public/index.html
+++ b/public/index.html
@@ -5,20 +5,19 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CfMJSdpc.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DlZEK8Iw.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.D8NWaD82.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DyW8b-kN.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DYbqqVlP.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.BgmYpKBM.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.Cx2jPaMs.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DEZ1TnJp.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/render.yXKOYZdl.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/events.dSNPNGWI.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/template.Bwm0jNJA.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.D3mZCF9g.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/render.SD0ewcgf.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/events.CT0cudyy.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/template.BawmihV2.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/if.C-IyMfWz.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.BbwgnY3B.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/this.BOyXjEu9.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/props.BwWMqRTi.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/if.C_6FtF3X.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.DqeqvYj_.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/this.bN7FqJ0X.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/props.BL0NScfz.js">
 	</head>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-99L1JC49Z1"></script>
 	<!-- Google tag (gtag.js) -->
@@ -33,15 +32,15 @@
 		<div>
 			<script>
 				{
-					__sveltekit_kkbzr3 = {
+					__sveltekit_1wt33ow = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CfMJSdpc.js"),
-						import("/_app/immutable/entry/app.DEZ1TnJp.js")
+						import("/_app/immutable/entry/start.DyW8b-kN.js"),
+						import("/_app/immutable/entry/app.D3mZCF9g.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
