Add very insecure rules that I won't really change :)

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BNylM7cv.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DEOkkiXy.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DcJC8Wth.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.y5NbvLr2.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.D8NWaD82.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BFqC5wTN.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.Cx2jPaMs.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CVDIzLLl.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CGJh-wDL.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/render.yXKOYZdl.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/events.dSNPNGWI.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/template.Bwm0jNJA.js">
@@ -33,15 +33,15 @@
 		<div>
 			<script>
 				{
-					__sveltekit_zy11e9 = {
+					__sveltekit_ge3yk9 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BNylM7cv.js"),
-						import("/_app/immutable/entry/app.CVDIzLLl.js")
+						import("/_app/immutable/entry/start.DcJC8Wth.js"),
+						import("/_app/immutable/entry/app.CGJh-wDL.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
