Add landing page text to database, update some visuals

--- a/public/index.html
+++ b/public/index.html
@@ -5,20 +5,19 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DcJC8Wth.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.y5NbvLr2.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.D8NWaD82.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BHL8DuYT.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CM3as4KZ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.BA9z0TQE.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.Cx2jPaMs.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CGJh-wDL.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/render.yXKOYZdl.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/events.dSNPNGWI.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/template.Bwm0jNJA.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.DeuiQtCB.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Cl6sA5ea.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/render.lPiBWGbM.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/template.CMUZ4EXv.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/if.C-IyMfWz.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.BbwgnY3B.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/this.BOyXjEu9.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/props.BwWMqRTi.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/if.kEDu1Ybk.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.DiuX2TZN.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/this.DxIx62DG.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/props.BLw8MLDx.js">
 	</head>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-99L1JC49Z1"></script>
 	<!-- Google tag (gtag.js) -->
@@ -33,15 +32,15 @@
 		<div>
 			<script>
 				{
-					__sveltekit_ge3yk9 = {
+					__sveltekit_po08ou = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DcJC8Wth.js"),
-						import("/_app/immutable/entry/app.CGJh-wDL.js")
+						import("/_app/immutable/entry/start.BHL8DuYT.js"),
+						import("/_app/immutable/entry/app.Cl6sA5ea.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
