Update the jump button and that's pretty much it

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BHL8DuYT.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CM3as4KZ.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DotK_yT5.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BU_yZ9Qw.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.BA9z0TQE.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BFqC5wTN.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.DeuiQtCB.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Cl6sA5ea.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DK4mXg1T.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/render.lPiBWGbM.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/template.CMUZ4EXv.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Bg9kRutz.js">
@@ -32,15 +32,15 @@
 		<div>
 			<script>
 				{
-					__sveltekit_po08ou = {
+					__sveltekit_h072x = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BHL8DuYT.js"),
-						import("/_app/immutable/entry/app.Cl6sA5ea.js")
+						import("/_app/immutable/entry/start.DotK_yT5.js"),
+						import("/_app/immutable/entry/app.DK4mXg1T.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
