Update the contact page and that's pretty much it

--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,18 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DotK_yT5.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BU_yZ9Qw.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.BA9z0TQE.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.vTAdUe0A.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Ahv240n8.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.BQFLrhwQ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.DeuiQtCB.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DK4mXg1T.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/render.lPiBWGbM.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/template.CMUZ4EXv.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.iRJ9OREz.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Mr7aIVv7.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/render.Cn_3AyOv.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/template.D1QsytsN.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/if.kEDu1Ybk.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.DiuX2TZN.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/this.DxIx62DG.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/props.BLw8MLDx.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/if.8NaOc27y.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/props.B1WPWrOh.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/this.CleJswTS.js">
 	</head>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-99L1JC49Z1"></script>
 	<!-- Google tag (gtag.js) -->
@@ -32,15 +31,15 @@
 		<div>
 			<script>
 				{
-					__sveltekit_h072x = {
+					__sveltekit_czsgol = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DotK_yT5.js"),
-						import("/_app/immutable/entry/app.DK4mXg1T.js")
+						import("/_app/immutable/entry/start.vTAdUe0A.js"),
+						import("/_app/immutable/entry/app.Mr7aIVv7.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
