--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.COuFbhxS.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.C8mOE8zH.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DHRT-8FI.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.o_ecR8pb.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.BQFLrhwQ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BFqC5wTN.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.iRJ9OREz.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DcJWo5hH.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Yn435s8b.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/render.Cn_3AyOv.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/template.D1QsytsN.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Bg9kRutz.js">
@@ -31,15 +31,15 @@
 		<div>
 			<script>
 				{
-					__sveltekit_1cfjss2 = {
+					__sveltekit_16kx579 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.COuFbhxS.js"),
-						import("/_app/immutable/entry/app.DcJWo5hH.js")
+						import("/_app/immutable/entry/start.DHRT-8FI.js"),
+						import("/_app/immutable/entry/app.Yn435s8b.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
